# wxAutoExcel

./: CMakeLists.txt  LICENSE.txt  ReadMe.md  ReadMe.txt  annotated.html  annotated_dup.js  appveyor.yml  classes.html  classwx_auto_excel_1_1wx_auto_excel_object_error_mode_overrider-members.html  classwx_auto_excel_1_1wx_auto_excel_object_error_mode_overrider.html  classwx_auto_excel_1_1wx_auto_excel_object_error_mode_overrider.js  classwx_auto_excel_1_1wx_excel_above_average-members.html  classwx_auto_excel_1_1wx_excel_above_average.html  classwx_auto_excel_1_1wx_excel_above_average.js  classwx_auto_excel_1_1wx_excel_above_average__inherit__graph.map  classwx_auto_excel_1_1wx_excel_above_average__inherit__graph.md5  classwx_auto_excel_1_1wx_excel_add_in-members.html  classwx_auto_excel_1_1wx_excel_add_in.html  classwx_auto_excel_1_1wx_excel_add_in.js  classwx_auto_excel_1_1wx_excel_add_in__inherit__graph.map  classwx_auto_excel_1_1wx_excel_add_in__inherit__graph.md5  classwx_auto_excel_1_1wx_excel_add_ins-members.html  classwx_auto_excel_1_1wx_excel_add_ins.html  classwx_auto_excel_1_1wx_excel_add_ins.js  classwx_auto_excel_1_1wx_excel_add_ins2-members.html  classwx_auto_excel_1_1wx_excel_add_ins2.html  classwx_auto_excel_1_1wx_excel_add_ins2.js  classwx_auto_excel_1_1wx_excel_add_ins2__coll__graph.map  classwx_auto_excel_1_1wx_excel_add_ins2__inherit__graph.md5  classwx_auto_excel_1_1wx_excel_add_ins__coll__graph.map  classwx_auto_excel_1_1wx_excel_add_ins__coll__graph.md5  classwx_auto_excel_1_1wx_excel_add_ins_base-members.html  classwx_auto_excel_1_1wx_excel_add_ins_base.html  classwx_auto_excel_1_1wx_excel_add_ins_base.js  classwx_auto_excel_1_1wx_excel_add_ins_base__coll__graph.map  classwx_auto_excel_1_1wx_excel_add_ins_base__coll__graph.md5  classwx_auto_excel_1_1wx_excel_add_ins_base__inherit__graph.map  classwx_auto_excel_1_1wx_excel_add_ins_base__inherit__graph.md5  classwx_auto_excel_1_1wx_excel_adjustments-members.html  classwx_auto_excel_1_1wx_excel_adjustments.html  (+983 more)
.github/workflows/: build-msvs2022-wxmaster.yml  build-msvs2022.yml  build-msvs2026-wxmaster.yml  build-msys2.yml  build-online-docs.yml  doxygen.yml
XLSpy/: enum2string.h  sample.xlsx  xlspy.h
docs/: FAQ.md  FAQ.txt  install.md  install.txt
docs/doxygen/: Doxyfile  FAQ.h  classes.h  installation.h  introduction.h  mainpage.h  tutorial.h
include/wx/: wxAutoExcel.h  wxAutoExcelAboveAverage.h  wxAutoExcelAddIns.h  wxAutoExcelAdjustments.h  wxAutoExcelAllowEditRanges.h  wxAutoExcelApplication.h  wxAutoExcelAreas.h  wxAutoExcelAuthor.h  wxAutoExcelAutoFilter.h  wxAutoExcelAxes.h  wxAutoExcelAxisTitle.h  wxAutoExcelBorders.h  wxAutoExcelBulletFormat2.h  wxAutoExcelCalloutFormat.h  wxAutoExcelCharacters.h  wxAutoExcelChart.h  wxAutoExcelChartArea.h  wxAutoExcelChartCategory.h  wxAutoExcelChartColorFormat.h  wxAutoExcelChartFillFormat.h  wxAutoExcelChartFormat.h  wxAutoExcelChartGroups.h  wxAutoExcelChartObjects.h  wxAutoExcelChartTitle.h  wxAutoExcelChartView.h  wxAutoExcelCharts.h  wxAutoExcelColorFormat.h  wxAutoExcelColorScale.h  wxAutoExcelColorScaleCriteria.h  wxAutoExcelComments.h  wxAutoExcelCommentsThreaded.h  wxAutoExcelConditionValue.h  wxAutoExcelConnectorFormat.h  wxAutoExcelControlFormat.h  wxAutoExcelCustomProperties.h  wxAutoExcelDataBarBorder.h  wxAutoExcelDataLabels.h  wxAutoExcelDataTable.h  wxAutoExcelDatabar.h  wxAutoExcelDisplayFormat.h  (+117 more)
samples/: samples.manifest  samples.rc  samples_vc14.props
samples/XLSpy/: enum2string.cpp  enum2string.h  getdata.cpp  getdata.h  sample.xlsx  xlspy.cpp  xlspy.h  xlspy.sln  xlspy.vcproj  xlspy_vc12.vcxproj  xlspy_vc14.sln  xlspy_vc14.vcxproj  xlspy_vc9.vcproj
samples/bulkdata/: bulkdata.cpp  bulkdata.sln  bulkdata.vcproj  bulkdata_vc12.vcxproj  bulkdata_vc14.sln  bulkdata_vc14.vcxproj  bulkdata_vc9.vcproj
samples/charts/: charts.cpp  charts.vcproj  charts_vc12.vcxproj  charts_vc14.sln  charts_vc14.vcxproj  charts_vc9.vcproj  charts_vc9.vsprops
samples/minimal/: minimal.cpp  minimal.vcproj  minimal_gcc.cbp  minimal_vc12.vcxproj  minimal_vc14.sln  minimal_vc14.vcxproj  minimal_vc9.sln  minimal_vc9.vcproj  minimal_vc9.vsprops
samples/print/: print.cpp  print.sln  print.vcproj  print_vc12.sln  print_vc12.vcxproj  print_vc14.sln  print_vc14.vcxproj  print_vc9.sln  print_vc9.vcproj  print_vc9.vsprops
samples/purewin32/: purewin32.cpp  purewin32_vc14.sln  purewin32_vc14.vcxproj  purewin32_vc9.sln  purewin32_vc9.vcproj  usewxAutoExcel.cpp  (+1 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enums_7.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+44 more)
src/: wxAutoExcelAboveAverage.cpp  wxAutoExcelAddIns.cpp  wxAutoExcelAdjustments.cpp  wxAutoExcelAllowEditRanges.cpp  wxAutoExcelApplication.cpp  wxAutoExcelAreas.cpp  wxAutoExcelAuthor.cpp  wxAutoExcelAutoFilter.cpp  wxAutoExcelAxes.cpp  wxAutoExcelAxisTitle.cpp  wxAutoExcelBorders.cpp  wxAutoExcelBulletFormat2.cpp  wxAutoExcelCalloutFormat.cpp  wxAutoExcelCharacters.cpp  wxAutoExcelChart.cpp  wxAutoExcelChartArea.cpp  wxAutoExcelChartCategory.cpp  wxAutoExcelChartColorFormat.cpp  wxAutoExcelChartFillFormat.cpp  wxAutoExcelChartFormat.cpp  wxAutoExcelChartGroups.cpp  wxAutoExcelChartObjects.cpp  wxAutoExcelChartTitle.cpp  wxAutoExcelChartView.cpp  wxAutoExcelCharts.cpp  wxAutoExcelColorFormat.cpp  wxAutoExcelColorScale.cpp  wxAutoExcelColorScaleCriteria.cpp  wxAutoExcelComments.cpp  wxAutoExcelCommentsThreaded.cpp  wxAutoExcelConditionValue.cpp  wxAutoExcelConnectorFormat.cpp  wxAutoExcelControlFormat.cpp  wxAutoExcelCustomProperties.cpp  wxAutoExcelDataBarBorder.cpp  wxAutoExcelDataLabels.cpp  wxAutoExcelDataTable.cpp  wxAutoExcelDatabar.cpp  wxAutoExcelDisplayFormat.cpp  wxAutoExcelDisplayUnitLabel.cpp  (+111 more)
trunk/: ReadMe.txt
(+309 files in other folders)
